[server] 更新 BuildPackPlayerIT